Add entry point using System.import.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "files": [
-    "typings/meteor.d.ts"
+    "typings/meteor.d.ts",
+    "typings/systemjs.d.ts"
   ],
   "compilerOptions": {
     "module": "system"
